[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/pauseMenu.gd" type="Script" id=1]
[ext_resource path="res://World/Levels/MainMenu/Menu.tres" type="Theme" id=2]
[ext_resource path="res://World/Levels/MainMenu/OptionsMenu.tscn" type="PackedScene" id=3]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float amount: hint_range(0.0, 5.0);

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, amount).rgb;
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/amount = 1.0

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.00392157, 0.796078, 0.811765, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0431373, 1, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.00392157, 0.796078, 0.811765, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.207843, 0.164706, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.00392157, 0.533333, 0.647059, 1 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
theme = ExtResource( 2 )

[node name="pauseMenu" type="Popup" parent="."]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -42.0
margin_right = 12.0
margin_bottom = 9.0
script = ExtResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="pauseMenu"]
material = SubResource( 7 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -618.0
margin_top = -343.5
margin_right = 662.0
margin_bottom = 376.5
rect_pivot_offset = Vector2( 270, 1230 )

[node name="ColorRect" type="ColorRect" parent="pauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.619608, 0.490196, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="pauseMenu"]
margin_right = 67.0
margin_bottom = 84.0

[node name="Resume" type="Button" parent="pauseMenu/VBoxContainer"]
unique_name_in_owner = true
margin_right = 67.0
margin_bottom = 14.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Quit")
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Resume"

[node name="Options" type="Button" parent="pauseMenu/VBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 67.0
margin_bottom = 32.0
focus_neighbour_top = NodePath("../Resume")
focus_neighbour_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Resume")
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Options"

[node name="Quit" type="Button" parent="pauseMenu/VBoxContainer"]
unique_name_in_owner = true
margin_top = 36.0
margin_right = 67.0
margin_bottom = 50.0
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Resume")
focus_next = NodePath("../Resume")
focus_previous = NodePath("../Options")
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Quit"

[node name="OptionsMenu" parent="pauseMenu" instance=ExtResource( 3 )]

[connection signal="pressed" from="pauseMenu/VBoxContainer/Resume" to="pauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="pauseMenu/VBoxContainer/Options" to="pauseMenu" method="_on_Options_pressed"]
[connection signal="pressed" from="pauseMenu/VBoxContainer/Quit" to="pauseMenu" method="_on_Quit_pressed"]
